<resources><!--TODO: clean up in here-->
    <string name="app_name">app</string>
    <string name="sign_in_button_txt">Sign in</string>
    <string name="title_activity_firebase_ui_auth">FirebaseUiAuth</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="landingText">YIPIEEE</string>
    <string name="sign_in_cancelled_msg">Sign in cancelled by user</string>
    <string name="no_internet_msg">Unable to connect to the internet</string>
    <string name="generic_error_msg">An error occurred</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_out">sign out</string>
    <string name="sign_in_to_the_app">sign in to the app</string>
    <string name="profile_picture">profile picture</string>
    <string name="username_stub">u/</string>
    <string name="followed_tags">followed tags</string>
    <string name="tag_button">tag button</string>
    <string name="follow_list">follow list</string>
    <string name="blocked_tags">blocked tags</string>
    <string name="block_list">block list</string>
    <string name="add_inst_text">+</string>
    <string name="edit_username_button">edit username button</string>
    <string name="title_placeholder">Title</string>
    <string name="op_s_profile_picture">OP\'s profile picture</string>
    <string name="board_stub">b/</string>
    <string name="post_tag_desc">list of tags associated with the post</string>
    <string name="example_text">example text</string>
    <string name="minus_inst_text">-</string>
    <string name="comment_desc">make a comment</string>
    <string name="upvote">upvote</string>
    <string name="downvote">downvote</string>
    <string name="location_posted">location posted</string>
    <string name="title">title</string>
    <string name="post_body">post body</string>
    <string name="create">create</string>
    <string name="add_geotag">add geotag</string>
    <string name="add_location_by_search">add location by search</string>
    <string name="cancel_geotag">cancel geotag</string>
    <string name="location">location</string>
    <string name="hashtag">#</string>
    <string name="zero">0</string>
    <string name="follow">Follow</string>
    <string name="unfollow">unfollow</string>
    <string name="block">Block</string>
    <string name="unblock">unblock</string>
    <string name="posts">Posts</string>
    <string name="info">Info</string>
    <string name="board_contents">board contents</string>
    <string name="delete_post">Delete Post</string>
    <string name="required_tags">Required tags</string>
    <string name="excluded_tags">Excluded tags</string>
    <string name="search">Search</string>
    <string name="popular">Popular</string>
    <string name="following">Following</string>
    <string name="profile">Profile</string>
    <string name="add_post_board">+ post</string>
</resources>