<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewPostFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <LinearLayout
            android:id="@+id/postInformation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="0dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/OPpfp"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="start"
                android:contentDescription="@string/op_s_profile_picture"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/postUsernameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|start"
                android:layout_marginStart="5dp"
                android:text="@string/username_stub" />

            <TextView
                android:id="@+id/postBoardText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|start"
                android:layout_marginStart="5dp"
                android:text="@string/board_stub" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/postTitle"
            android:hint="@string/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/postBody"
            android:hint="@string/post_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/postTagRV"
            android:contentDescription="@string/post_tag_desc"
            android:layout_width="match_parent"
            android:layout_height="40dp"/>

        <Button
            android:id="@+id/addPostTagButton"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_gravity="end"
            android:text="@string/add_inst_text"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/addLocationButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_geotag"/>

            <Button
                android:id="@+id/addLocationByText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_location_by_search"
                android:layout_marginStart="10dp"
                android:visibility="gone"/>

            <Button
                android:id="@+id/cancelGeotag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel_geotag"
                android:visibility="gone"/>

        </LinearLayout>

        <com.google.android.gms.maps.MapView
            android:id="@+id/setMapMarkerView"
            android:layout_width="match_parent"
            android:layout_height="404dp"
            android:contentDescription="@string/location_posted"
            android:visibility="gone"/>

        <Button
            android:id="@+id/createPostButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create" />
    </LinearLayout>
</ScrollView>