<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search"
        app:actionViewClass="android.widget.SearchView"/>

    <item
        android:id="@+id/navigation_popular"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/popular" />

    <item
        android:id="@+id/navigation_following"
        android:icon="@android:drawable/star_big_off"
        android:title="@string/following" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/fui_ic_anonymous_white_24dp"
        android:title="@string/profile" />
</menu>