<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">


    <!-- sign out button to be removed later -->
    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:text="@string/sign_out" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/profile_picture"
            android:src="@drawable/ic_launcher_foreground" />

        <TextView
            android:id="@+id/signedInProfileUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/username_stub"
            android:layout_marginTop="5dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/followListTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/followed_tags"/>

        <Button
            android:id="@+id/followTageButton"
            android:layout_width="55dp"
            android:layout_marginStart="5dp"
            android:layout_height="wrap_content"
            android:text="@string/add_inst_text" />
    </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/followList"
            android:contentDescription="@string/follow_list"
            android:layout_width="match_parent"
            android:layout_height="40dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_gravity="center_horizontal">
        <TextView
            android:id="@+id/blockListTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blocked_tags"/>
        <Button
            android:id="@+id/button6"
            android:layout_width="55dp"
            android:layout_marginStart="5dp"
            android:layout_height="wrap_content"
            android:text="@string/add_inst_text" />
    </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/blockList"
            android:contentDescription="@string/block_list"
            android:layout_width="match_parent"
            android:layout_height="40dp"/>


    </LinearLayout>
</FrameLayout>