<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BoardFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

    <ImageView
        android:id="@+id/boardImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:contentDescription="@string/profile_picture"
        android:layout_marginHorizontal="10dp"
        android:src="@drawable/ic_launcher_foreground" />

        <TextView
            android:id="@+id/boardName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/board_stub"
            android:textSize="30sp"
            android:layout_gravity="bottom"/>

        <Button
            android:id="@+id/addNewPostButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_post_board"
            android:layout_gravity="bottom"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/boardTagsRV"
        android:layout_width="match_parent"
        android:layout_height="40dp"/>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/board_contents"/>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>