<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    tools:context=".TagFragment"
    android:orientation="vertical">

    <TextView
        android:id="@+id/viewingTagName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example_text"
        android:textSize="35sp"
        android:layout_marginHorizontal="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <Button
        android:id="@+id/followTagButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/follow"
        android:layout_marginHorizontal="10dp"/>


    <Button
        android:id="@+id/blockTagButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/block"
        android:layout_marginHorizontal="10dp"/>

    </LinearLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/tagPostsFrag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>