<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/searchLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SearchFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/requiredListTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/required_tags"/>

        <Button
            android:id="@+id/requireTagButton"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/add_inst_text"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/includeTags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/excludedListTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/excluded_tags"/>

        <Button
            android:id="@+id/excludeTagButton"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/add_inst_text"/>
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/excludeTags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/searchChips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:checkedChip="@id/postsChip"
        app:singleLine="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/postsChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Posts" />

        <com.google.android.material.chip.Chip
            android:id="@+id/boardsChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Boards" />

        <com.google.android.material.chip.Chip
            android:id="@+id/accountsChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Accounts" />
    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.search.SearchBar
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Search"
        app:defaultMarginsEnabled="false" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/searchResFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>




</LinearLayout>